# devicekiosk

./: .gitignore  LICENSE  MANIFEST.in  README.md  buildflatpak.sh  buildlinuxbinaries.sh  buildwindowsbinaries.ps1  pyrightconfig.json  python3-EmailMessage.json  python3-requests.json  requirements.txt  setup.cfg  us.ct.k12.tolland.devicekiosk.desktop  us.ct.k12.tolland.devicekiosk.json  us.ct.k12.tolland.devicekiosk.metainfo.xml
src/: __main__.py  config-example.yml  config.yml  devicekiosk.py  devicekiosk.spec  send_to_printer.py
src/images/: schoollogo.txt
src/qml/: DailyHomeroom.qml  DailyLoanerCharger.qml  DailyLoanerDevice.qml  Description.qml  Device.qml  Dropoff.qml  EOYFinish.qml  EOYReturn.qml  EOYStart.qml  Email.qml  Finish.qml  FinishDailyBorrow.qml  FinishDailyReturn.qml  Loaner.qml  Main.qml  Old.qml  Pickup.qml  Print.qml  Return.qml  Start.qml  Submit.qml  SubmitPickup.qml  User.qml
