[metadata]
name = us.ct.k12.tolland.devicekiosk
version = 2.1.0
url = https://www.tolland.k12.ct.us
author= Adam Sher
author_email = asher@tolland.k12.ct.us
maintainer = Adam Sher
maintainer_email = asher@tolland.k12.ct.us
description = Student self-service kiosk for Tolland Public Schools
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: End Users/Desktop
    Topic :: Office
    Programming Language :: Python :: 3
keywords= winds paradise launcher

[options]
packages = devicekiosk
package_dir =
    devicekiosk = src
include_package_data = True
install_requires =
    requests
    EmailMessage
    pyyaml

[options.data_files]
share/applications =
    us.ct.k12.tolland.devicekiosk.desktop
share/icons/hicolor/scalable/apps =
    us.ct.k12.tolland.devicekiosk.svg
share/metainfo =
    us.ct.k12.tolland.devicekiosk.metainfo.xml

[options.entry_points]
console_scripts =
    devicekiosk = devicekiosk.devicekiosk:main